# jarvis-voice_user

./: CMakeLists.txt  README.md  app.manifest  app.rc  app_generated.rc  main.cpp  main.ui  resources.qrc  settings.json
SDL2/lib/x64/: SDL2main.lib  SDL2test.lib
SDL2/lib/x86/: SDL2.lib  SDL2main.lib  SDL2test.lib
design/: main.ui
dll/: base64.lib
include/: api_key.h  pv_circular_buffer.h  pv_recorder.h
include/nlohmann/: json.hpp
include/src/: CustomNotification.h  TraySystem.h  WindowLister.h  animationcontroller.h  api.h  app_launcher.h  audioControl.h  audioPlayer.h  authorization.h  autostart.h  command_processor.h  core.h  gradientwidget.h  http_client.h  installed_programs.h  keyboard.h  logger.h  mainwindow.h  my_commands.h  settings.h  speech_recognition.h  style.h  switch.h
libs/: SDL2_mixer.lib  libcurl.lib  libcurl_a.lib  pv_recorder.lib  vosk.lib
scripts/: AudioControl.cpp  AudioPlayer.cpp  CustomNotification.cpp  TraySystem.cpp  WindowLister.cpp  animationcontroller.cpp  api.cpp  app_launcher.cpp  authorization.cpp  autostart.cpp  command_processor.cpp  core.cpp  gradientwidget.cpp  http_client.cpp  installed_programs.cpp  keyboard.cpp  logger.cpp  main.ui  mainwindow.cpp  my_commands.cpp  settings.cpp  speech_recognition.cpp  switch.cpp
styles/: test.xml
temp/: GradientWidget.cpp  GradientWidget.h  animation.cpp  animation.h
vosk-api-master/jarvis.dir/Release/jarvis.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
vosk-api-master/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
vosk-api-master/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
whisper/: CMakeLists.txt  main.cpp  norm.cpp  oldmain.cpp
